@@ -1,5 +1,5 @@
 // -*- coding: utf-8 -*-
-// Copyright (C) 2008, 2013-2016, 2018-2019 Laboratoire de Recherche
+// Copyright (C) 2008, 2013-2016, 2018-2020 Laboratoire de Recherche
 // et Développement de l'Epita (LRDE).
 // Copyright (C) 2003, 2004, 2005, 2006 Laboratoire d'Informatique de
 // Paris 6 (LIP6), département Systèmes Répartis Coopératifs (SRC),
@@ -217,11 +217,6 @@ namespace spot
     todo_list todo;
 
     void clear_todo();
-
-#ifdef SPOT_TRACE
-    /// Dump the queue for debugging.
-    void dump_queue(std::ostream& os = std::cerr);
-#endif
 
     /// Whether successors should be grouped for states in the same SCC.
     bool group_;
