@@ -1,6 +1,6 @@
 #!/bin/sh
 # -*- coding: utf-8 -*-
-# Copyright (C) 2010-2015, 2017-2018 Laboratoire
+# Copyright (C) 2010-2015, 2017-2018, 2020 Laboratoire
 # de Recherche et Développement de l'Epita (LRDE).
 #
 # This file is part of Spot, a model checking library.
@@ -340,7 +340,7 @@ digraph "-" {
   1 [label="1", peripheries=2]
   }
   subgraph cluster_1 {
-  color=red
+  color=black
   label=""
   0 [label="0"]
   }
