@@ -119,6 +119,9 @@ New in spot 2.8.7.dev (not yet released)
   - Relabeling automata could introduce false edges.  Those are now
     removed.
 
+  - Emptiness checks, and scc_info should now ignore edges labeled
+    with false.
+
 New in spot 2.8.7 (2020-03-13)
 
   Bugs fixed:
